ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.0.0-rc6
    • Affects Version/s: 2.8.0-rc5
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Got the following on shutdown. The process did terminate.

      2015-01-18T01:28:14.220+0000 I NETWORK  [conn9412] end connection 10.200.0.129:59405 (1000 connections now open)
      2015-01-18T01:28:14.326+0000 I NETWORK  [conn9406] end connection 10.20.0.243:37974 (999 connections now open)
      2015-01-18T01:28:14.333+0000 I NETWORK  [initandlisten] connection accepted from 10.20.0.243:37998 #9413 (1000 connections now open)
      2015-01-18T01:28:15.302+0000 I NETWORK  [initandlisten] connection accepted from 10.20.0.243:38001 #9414 (1001 connections now open)
      2015-01-18T01:28:15.664+0000 I NETWORK  [initandlisten] connection accepted from 10.10.0.150:64793 #9415 (1002 connections now open)
      2015-01-18T01:28:29.688+0000 I NETWORK  [initandlisten] connection accepted from 127.0.0.1:39737 #9416 (1003 connections now open)
      2015-01-18T01:28:29.694+0000 I COMMAND  [conn9416] terminating, shutdown command received
      2015-01-18T01:28:29.694+0000 I STORAGE  [conn608] got request after shutdown()
      2015-01-18T01:28:29.696+0000 I REPL     [conn9416] Stopping replication applier threads
      2015-01-18T01:28:29.698+0000 I STORAGE  [conn664] got request after shutdown()
      2015-01-18T01:28:29.698+0000 I STORAGE  [conn663] got request after shutdown()
      2015-01-18T01:28:29.699+0000 I QUERY    [conn840] assertion 11600 interrupted at shutdown ns:mmsdbconfig.config.hosts query:{ cid: ObjectId('5253dd807ec5df2d7b07cb55'), hp: /ladsmng/ }
      2015-01-18T01:28:29.700+0000 I QUERY    [conn840]  ntoskip:0 ntoreturn:20
      2015-01-18T01:28:29.700+0000 I STORAGE  [conn8971] got request after shutdown()
      2015-01-18T01:28:29.702+0000 I STORAGE  [conn809] got request after shutdown()
      2015-01-18T01:28:29.713+0000 I -        [conn2365] Invariant failure event.isValid() src/mongo/db/repl/replication_executor.cpp 214
      2015-01-18T01:28:29.718+0000 I NETWORK  [conn8967] end connection 10.200.0.129:53540 (996 connections now open)
      2015-01-18T01:28:29.718+0000 I STORAGE  [conn145] got request after shutdown()
      2015-01-18T01:28:29.719+0000 I STORAGE  [conn156] got request after shutdown()
      2015-01-18T01:28:29.721+0000 I CONTROL  [conn2365]
       0xf81999 0xf1fc41 0xf04f62 0xcaa066 0xc92900 0xcb0ea4 0xcb1deb 0x98b398 0x9d0584 0x9d14c3 0x9d1f7b 0xbd5565 0xab08aa 0x802b80 0xf33ec1 0x307bc079d1 0x307b8e8b6d
      ----- BEGIN BACKTRACE -----
      {"backtrace":[{"b":"400000","o":"B81999"},{"b":"400000","o":"B1FC41"},{"b":"400000","o":"B04F62"},{"b":"400000","o":"8AA066"},{"b":"400000","o":"892900"},{"b":"400000","o":"8B0EA4"},{"b":"400000","o":"8B1DEB"},{"b":"400000","o":"58B398"},{"b":"400000","o":"5D0584"},{"b":"400000","o":"5D14C3"},{"b":"400000","o":"5D1F7B"},{"b":"400000","o":"7D5565"},{"b":"400000","o":"6B08AA"},{"b":"400000","o":"402B80"},{"b":"400000","o":"B33EC1"},{"b":"307BC00000","o":"79D1"},{"b":"307B800000","o":"E8B6D"}],"processInfo":{ "mongodbVersion" : "2.8.0-rc5", "gitVersion" : "74b351de21c84438b12a83b28e155f5e69e3c1eb modules: enterprise", "uname" : { "sysname" : "Linux", "release" : "2.6.32-431.5.1.el6.x86_64", "version" : "#1 SMP Wed Feb 12 00:41:43 UTC 2014", "machine" : "x86_64" }, "somap" : [ { "elfType" : 2, "b" : "400000", "buildId" : "88841F2E0E57CBA9414C119E380DD2E362EFAA81" }, { "b" : "7FFF3C0CF000", "elfType" : 3, "buildId" : "F795EFBE6950D1523C5748594C166CEDD4254C33" }, { "path" : "/usr/lib64/libsasl2.so.2", "elfType" : 3, "buildId" : "9E79FB1A0DDCEC497B5D8AFD86CC378ACF8E354A" }, { "path" : "/lib64/libgssapi_krb5.so.2", "elfType" : 3, "buildId" : "EFF68B7DE77D081BC4A0CB38FE9DCBC60541BF92" }, { "b" : "7F469D763000", "path" : "/usr/lib64/libnetsnmpagent.so.20", "elfType" : 3, "buildId" : "BBC417ED3E99E31E5AA93EA913B9649F3AF46352" }, { "b" : "7F469D53D000", "path" : "/usr/lib64/libnetsnmphelpers.so.20", "elfType" : 3, "buildId" : "C040838C539ECC7102C3101E1456BCEAB9AB4D28" }, { "b" : "7F469D0F7000", "path" : "/usr/lib64/libnetsnmpmibs.so.20", "elfType" : 3, "buildId" : "E2E3E0095CC679EFEA222AAFD40B1B3F4F5BD6F6" }, { "path" : "/usr/lib64/libnetsnmp.so.20", "elfType" : 3, "buildId" : "062251BA67BD95D032162CC73FEB67449E774F08" }, { "path" : "/lib64/libpthread.so.0", "elfType" : 3, "buildId" : "1BB4E10307D6B94223749CFDF2AD14C365972C60" }, { "path" : "/usr/lib64/libssl.so.10", "elfType" : 3, "buildId" : "DB1785F0187DE5A9307FC2A79E8B1BE953C5562C" }, { "path" : "/usr/lib64/libcrypto.so.10", "elfType" : 3, "buildId" : "58F274C5E71DE44F93ACA77E8F959601545A053C" }, { "path" : "/lib64/librt.so.1", "elfType" : 3, "buildId" : "B26528BF6C0636AC1CAE5AC50BDBC07E60851DF4" }, { "path" : "/lib64/libdl.so.2", "elfType" : 3, "buildId" : "AFC7448F2F2F6ED4E5BC82B1BD8A7320B84A9D48" }, { "path" : "/usr/lib64/libstdc++.so.6", "elfType" : 3, "buildId" : "ED99110E629209C5CA6C0ED704F2C5CE3171513A" }, { "path" : "/lib64/libm.so.6", "elfType" : 3, "buildId" : "98B028A725D6E93253F25DF00B794DFAA66A3145" }, { "path" : "/lib64/libgcc_s.so.1", "elfType" : 3, "buildId" : "A44499D29B114A5366CD72DD4883958495AC1C1D" }, { "path" : "/lib64/libc.so.6", "elfType" : 3, "buildId" : "F1A1C0575F0EC141A157E5DFA4525E70BD27B62E" }, { "path" : "/lib64/ld-linux-x86-64.so.2", "elfType" : 3, "buildId" : "57BF668F99B7F5917B8D55FBB645173C9A644575" }, { "path" : "/lib64/libresolv.so.2", "elfType" : 3, "buildId" : "56843351EFB2CE304A7E4BD0754991613E9EC8BD" }, { "path" : "/lib64/libcrypt.so.1", "elfType" : 3, "buildId" : "2B2EAE3EB99811D0DBC0FC5979A0A9BFC7B1B1ED" }, { "path" : "/lib64/libkrb5.so.3", "elfType" : 3, "buildId" : "95EBB74C2C0A1E1714344036145A0239FFA4892D" }, { "path" : "/lib64/libk5crypto.so.3", "elfType" : 3, "buildId" : "D02E7D3149950118009A81997434E28B7D9EC9B2" }, { "b" : "7F161F6EE000", "path" : "/lib64/libcom_err.so.2", "elfType" : 3, "buildId" : "6A22EDFF4D4F04A57573E3D1536B6B4963159CD5" }, { "path" : "/lib64/libkrb5support.so.0", "elfType" : 3, "buildId" : "5AFCBEA0D62EE0335714CCBAB7BA808E2A16028C" }, { "path" : "/lib64/libkeyutils.so.1", "elfType" : 3, "buildId" : "8A8734DC37305D8CC2EF8F8C3E5EA03171DB07EC" }, { "b" : "7F469CCE2000", "path" : "/lib64/libwrap.so.0", "elfType" : 3, "buildId" : "AF347D935D180F8DB860C8D7217D358D410F04AA" }, { "path" : "/usr/lib64/perl5/CORE/libperl.so", "elfType" : 3, "buildId" : "5BC47A915E631DAA6258CD8C93B36AB8D198B05C" }, { "path" : "/lib64/libnsl.so.1", "elfType" : 3, "buildId" : "5E8FF5EC31E07C0CDC5111AB4F21163368414038" }, { "path" : "/lib64/libutil.so.1", "elfType" : 3, "buildId" : "53854215158A8CE55566A72205ACED9DA5DC9FF0" }, { "path" : "/usr/lib64/librpm.so.1", "elfType" : 3, "buildId" : "16F42CA334E16C5A1D782885892EDACBA0E13B82" }, { "path" : "/usr/lib64/librpmio.so.1", "elfType" : 3, "buildId" : "80C456109D8276387AC839969FDA28DE17D43019" }, { "b" : "7F161E6D7000", "path" : "/lib64/libpopt.so.0", "elfType" : 3, "buildId" : "B63802ED60425340F111EE7872F09D2FF91226DE" }, { "path" : "/lib64/libz.so.1", "elfType" : 3, "buildId" : "5FA8E5038EC04A774AF72A9BB62DC86E1049C4D6" }, { "b" : "7F469C8C6000", "path" : "/usr/lib64/libsensors.so.4", "elfType" : 3, "buildId" : "6855E5BF5B3634C15F01B1043BD892D727EE3C08" }, { "path" : "/lib64/libfreebl3.so", "elfType" : 3, "buildId" : "E3A08EBD0C4194CDAE255A4E2E49FA0667130B5B" }, { "path" : "/lib64/libselinux.so.1", "elfType" : 3, "buildId" : "BAD5C71361DADF259B6E306A49E6F47F24AEA3DC" }, { "path" : "/usr/lib64/libnss3.so", "elfType" : 3, "buildId" : "7BCAFF8D53FACF3506B7DBD807633E7910660E8F" }, { "path" : "/lib64/libbz2.so.1", "elfType" : 3, "buildId" : "732F8FD5054C4FA43CF0CD4CC8C5FF02CEA3CC54" }, { "path" : "/usr/lib64/libelf.so.1", "elfType" : 3, "buildId" : "812063BC8232E806DFB28875869EC60AA49BF0E8" }, { "b" : "7F161B6A3000", "path" : "/usr/lib64/liblzma.so.0", "elfType" : 3, "buildId" : "D1D62B2DFC18F86DEA45580A67B93AB0A5A0BC94" }, { "b" : "7F161B076000", "path" : "/usr/lib64/liblua-5.1.so", "elfType" : 3, "buildId" : "4066827F15D4E52C68B93C8A8449FCB74E445981" }, { "path" : "/lib64/libcap.so.2", "elfType" : 3, "buildId" : "38E2E99D39C66158CB99AB95E39977E00EFE322B" }, { "path" : "/lib64/libacl.so.1", "elfType" : 3, "buildId" : "4B2ED0693FBECE2889654F4C4D20F231646F1490" }, { "b" : "7F161BD01000", "path" : "/lib64/libdb-4.7.so", "elfType" : 3, "buildId" : "9BC7D4967F90769510FA1A174361988D04F5ACE5" }, { "path" : "/usr/lib64/libnssutil3.so", "elfType" : 3, "buildId" : "0AB32F1A6CC5A359265C4BF301C0D358DB7AF62C" }, { "path" : "/lib64/libplc4.so", "elfType" : 3, "buildId" : "697AA8DC84D6C8760D97CEDE3C5F97F2E9D9836A" }, { "path" : "/lib64/libplds4.so", "elfType" : 3, "buildId" : "DE533729C0B9D274189D560966C874E87FA02E7A" }, { "path" : "/lib64/libnspr4.so", "elfType" : 3, "buildId" : "3FADE326C6CFE5780DED456AD84364FD14B4F845" }, { "path" : "/lib64/libattr.so.1", "elfType" : 3, "buildId" : "008CD0B305259DB5F9B8C8D0DBC563BA709A66C1" }, { "b" : "7F469BEF2000", "path" : "/usr/lib64/sasl2/liblogin.so", "elfType" : 3, "buildId" : "161930A21E55FFADF2FAB366184D2F398D922E92" }, { "b" : "7F469BCED000", "path" : "/usr/lib64/sasl2/libplain.so", "elfType" : 3, "buildId" : "22E4D23A991A44E27DC0D22DB519BC1E22DE3B89" }, { "b" : "7F469BAE7000", "path" : "/usr/lib64/sasl2/libcrammd5.so", "elfType" : 3, "buildId" : "81EBAAB9FB79C6FBF16113946E8E51F59D22DCE6" }, { "b" : "7F469B8E2000", "path" : "/usr/lib64/sasl2/libanonymous.so", "elfType" : 3, "buildId" : "DEA21FA91ABB7116E372416CBAEC076AECB0B94C" }, { "b" : "7F469B6DC000", "path" : "/usr/lib64/sasl2/libsasldb.so", "elfType" : 3, "buildId" : "20A9C9C04FA83BF4A04AA68833D8774B463BF22E" }, { "b" : "7F469B4CF000", "path" : "/usr/lib64/sasl2/libdigestmd5.so", "elfType" : 3, "buildId" : "59CF90146D760E586F0360B194141D1AAE15427F" } ] }}
       mongod(_ZN5mongo15printStackTraceERSo+0x29) [0xf81999]
       mongod(_ZN5mongo10logContextEPKc+0xE1) [0xf1fc41]
       mongod(_ZN5mongo15invariantFailedEPKcS1_j+0xB2) [0xf04f62]
       mongod(_ZN5mongo4repl19ReplicationExecutor12waitForEventERKNS1_11EventHandleE+0x2E6) [0xcaa066]
       mongod(_ZN5mongo4repl26ReplicationCoordinatorImpl22fillIsMasterForReplSetEPNS0_16IsMasterResponseE+0xB0) [0xc92900]
       mongod(_ZN5mongo4repl21appendReplicationInfoEPNS_16OperationContextERNS_14BSONObjBuilderEi+0xF44) [0xcb0ea4]
       mongod(_ZNK5mongo4repl27ReplicationInfoServerStatus15generateSectionEPNS_16OperationContextERKNS_11BSONElementE+0x7B) [0xcb1deb]
       mongod(_ZN5mongo15CmdServerStatus3runEPNS_16OperationContextERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x7A8) [0x98b398]
       mongod(_ZN5mongo12_execCommandEPNS_16OperationContextEPNS_7CommandERKSsRNS_7BSONObjEiRSsRNS_14BSONObjBuilderEb+0x34) [0x9d0584]
       mongod(_ZN5mongo7Command11execCommandEPNS_16OperationContextEPS0_iPKcRNS_7BSONObjERNS_14BSONObjBuilderEb+0xC13) [0x9d14c3]
       mongod(_ZN5mongo12_runCommandsEPNS_16OperationContextEPKcRNS_7BSONObjERNS_11_BufBuilderINS_16TrivialAllocatorEEERNS_14BSONObjBuilderEbi+0x28B) [0x9d1f7b]
       mongod(_ZN5mongo8runQueryEPNS_16OperationContextERNS_7MessageERNS_12QueryMessageERKNS_15NamespaceStringERNS_5CurOpES3_b+0x755) [0xbd5565]
       mongod(_ZN5mongo16assembleResponseEPNS_16OperationContextERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortEb+0xB0A) [0xab08aa]
       mongod(_ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortEPNS_9LastErrorE+0xE0) [0x802b80]
       mongod(_ZN5mongo17PortMessageServer17handleIncomingMsgEPv+0x321) [0xf33ec1]
       libpthread.so.0(+0x79D1) [0x307bc079d1]
       libc.so.6(clone+0x6D) [0x307b8e8b6d]
      -----  END BACKTRACE  -----
      2015-01-18T01:28:29.721+0000 I -        [conn2365]
      
      ***aborting after invariant() failure
      

            Assignee:
            Eric Milkie
            Reporter:
            Daniel Pasette (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: