SERVER-16925 check for shutdown in isMaster